[gd_scene load_steps=5 format=3 uid="uid://bkd7vud3l5j2s"]

[ext_resource type="Script" path="res://Scripts/Cartas/carta_item.gd" id="1_cjfr2"]
[ext_resource type="Texture2D" uid="uid://c7wc2oumchmdq" path="res://assets/imagens/backgroundCard.png" id="2_0caye"]
[ext_resource type="Texture2D" uid="uid://r0a53i7plh3x" path="res://assets/imagens/CartasTesouro.png" id="3_bbjy1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vo6kp"]
size = Vector2(130, 210)

[node name="CartaItem" type="Node2D"]
script = ExtResource("1_cjfr2")

[node name="BackgroundCard" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.603922)
scale = Vector2(0.25, 0.235)
texture = ExtResource("2_0caye")

[node name="carta_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.22, 0.22)
texture = ExtResource("3_bbjy1")
hframes = 6
vframes = 13
frame = 70

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vo6kp")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
